mdm_Location/MDM_Location/src/objects/MDM_GRID_X_SourceID__c.object
<CustomObject>
    <description>MDM_GRID_X_SourceID</description>
    <fields>
        <fullName>CompositeSourceKey__c</fullName>
        <description>CompositeSourceKey</description>
        <externalId>true</externalId>
        <inlineHelpText>CompositeSourceKey</inlineHelpText>
        <label>CompositeSourceKey</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoldenRecordID__c</fullName>
        <description>Golden Record ID</description>
        <inlineHelpText>Golden Record ID</inlineHelpText>
        <label>Golden Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdFromSource__c</fullName>
        <label>IdFromSource</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDM_Integration_Status__c</fullName>
        <label>MDM Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarantine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesTrak EM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MDM_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MDM_Source reference</description>
        <inlineHelpText>MDM_Source name reference</inlineHelpText>
        <label>MDM Source</label>
        <referenceTo>MDM_Source__c</referenceTo>
        <relationshipLabel>MDM_GRID_X_SourceIDs</relationshipLabel>
        <relationshipName>LocationGRID_X_Source_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarantine_Error__c</fullName>
        <label>Quarantine Error</label>
        <type>TextArea</type>
    </fields>
    <label>MDM_GRID_X_SourceID</label>
    <listViews>
        <fullName>All</fullName>
        <columns>UPDATEDBY_USER</columns>
        <columns>GoldenRecordID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>IdFromSource__c</columns>
        <columns>MDM_Integration_Status__c</columns>
        <columns>Quarantine_Error__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GoldenRecordID__c</field>
            <operation>equals</operation>
        </filters>
        <label>golden REcord is blank</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>LocationGRID_X_Source_ID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_GRID_X_SourceIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>